Bug 184445 - Deleting multiple files in folder view gives me multiple errors
Summary: Deleting multiple files in folder view gives me multiple errors
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-Trash (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-15 20:25 UTC by Joe Biden
Modified: 2017-08-15 05:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments
Deleting multiple files (652.70 KB, image/png)
2009-02-15 20:27 UTC, Joe Biden
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joe Biden 2009-02-15 20:25:40 UTC
Version:           0.10.0-rc2 (using 4.2.00 (KDE 4.2.0), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.27-11-generic

Attachment should highlight issue.

When simply deleting multiple items (By highlighting and hitting Delete key), a bunch of the same error popped up. Files were deleted normally.
Comment 1 Joe Biden 2009-02-15 20:27:14 UTC
Created attachment 31341 [details]
Deleting multiple files
Comment 2 caulier.gilles 2009-02-15 20:30:11 UTC
Not reproducible here. Check right access from your FS.

Gilles Caulier
Comment 3 Joe Biden 2009-02-15 20:33:28 UTC
The files are all 777 and have been since day one. It's not a write issue.
I've been a sysadmin for 20 years. Honestly, I would have caught that.
Comment 4 caulier.gilles 2009-02-15 20:35:27 UTC
Which FS is used ? Which messages can you read from the console when you run digiKam from command line ?

Gilles Caulier
Comment 5 Joe Biden 2009-02-15 20:41:23 UTC
Standard ext3 FS used for 2 years. No SMART errors, no log messages.

When I delete multiple files (over 4-5 seems to cause the error messages), I get:

Warning: Failed to read thumbnail, rc = 2                                                                                                                             
start generate indexes                                                                                                                                                
generated indexes                                                                                                                                                     
MarblePlacemarkModel (generateIndex): Time elapsed: 392 ms                                                                                                            
Style reset requested.                                                                                                                                                
Style reset requested.                                                                                                                                                
Warning: Failed to read thumbnail, rc = 2                                                                                                                             
timeChanged                                                                                                                                                           
void SunLocator::update()
Warning: Failed to read thumbnail, rc = 2
Warning: Failed to read thumbnail, rc = 2
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
Warning: Failed to read thumbnail, rc = 2
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
digikam(32055) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/home/username/pics/200902-Winter/20090201-Horses/Sangipics"
Warning: Failed to read thumbnail, rc = 2
Warning: Failed to read thumbnail, rc = 2
Warning: Failed to read thumbnail, rc = 2
Warning: Failed to read thumbnail, rc = 2
Warning: Failed to read thumbnail, rc = 2
Comment 6 Marcel Wiesweg 2009-02-15 21:44:34 UTC
Did you by any chance have the image editor with this directory open while deleting? The only occurrence of this string in digikam is in image editor (editorwindow) code.
Comment 7 Joe Biden 2009-02-17 20:00:30 UTC
Yes, Marcel, I did.
Comment 8 Marcel Wiesweg 2009-02-17 21:25:29 UTC
Ok, then the problem is that the editor always tries to load the next image in its list, but that is already deleted, and so forth.
I need to think about a solution to avoid this behavior.
Comment 9 caulier.gilles 2009-02-17 21:37:22 UTC
I think than a similar problem can be found in Light table, and perhaps in Batch Queue Manager

Gilles
Comment 10 Marcel Wiesweg 2009-07-06 23:30:25 UTC
SVN commit 992446 by mwiesweg:

On failure to load a file, do not show a message box but draw the error message on the canvas,
consistent with the preview.
This fixes all problems that arise when multiple error occur rapidly (like trying to
load a group of non existent files in a row)

BUG: 184445

 M  +3 -1      NEWS  
 M  +24 -0     utilities/imageeditor/canvas/canvas.cpp  
 M  +0 -9      utilities/imageeditor/editor/editorwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=992446