On failure to load a file, do not show a message box but draw the error message on the canvas, consistent with the preview. This fixes all problems that arise when multiple error occur rapidly (like trying to load a group of non existent files in a row)

BUG: 184445

svn path=/trunk/extragear/graphics/digikam/; revision=992446